--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,9 @@ run: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows
 – name: Extract
 run: Expand-Archive ngrok.zip
 – name: Auth
-run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
+run: .\ngrok\ngrok.exe authtoken 2Se7QKvfXFYzwei9Q7PZYfArMlF_3idEDMzfXikrJfRWzk54J
 env:
-NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+NGROK_AUTH_TOKEN: 2Se7QKvfXFYzwei9Q7PZYfArMlF_3idEDMzfXikrJfRWzk54J
 – name: Enable TS
 run: Set-ItemProperty -Path ‘HKLM:\System\CurrentControlSet\Control\Terminal Server’-name “fDenyTSConnections” -Value 0
 – run: Enable-NetFirewallRule -DisplayGroup “Remote Desktop”
