--- a/.github/workflows/maain.yml
+++ b/.github/workflows/maain.yml
@@ -38,7 +38,7 @@ jobs:
 
     - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
 
-    - run: Set-LocalUser -Name "ClassicX" -Password (ConvertTo-SecureString -AsPlainText "ClassicX" -Force)
+    - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "ClassicX381@27926885" -Force)
 
     - name: Create Tunnel
 
