--- a/.github/workflows/maain.yml
+++ b/.github/workflows/maain.yml
@@ -46,5 +46,12 @@ jobs:
       
     - name: Wait 24 Hours
       
-      run: Start-Sleep -Seconds 86400
+      run: $TotalSeconds = 86400
+           $ElapsedTime = 0
+
+           while ($ElapsedTime -lt $TotalSeconds) {
+           Start-Sleep -Seconds 1
+           $ElapsedTime++
+           }
+
 
