--- a/.github/workflows/maain.yml
+++ b/.github/workflows/maain.yml
@@ -1,74 +1,49 @@
 name: CI
 
-
 on: [push, workflow_dispatch]
 
-
 jobs:
-
   build:
-
-
     runs-on: windows-latest
 
-
     steps:
-
     - name: Download NGROK
-
       run: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
 
     - name: Download NoMachine
-
-      run: $url = "https://download.nomachine.com/download/8.7/Windows/nomachine_8.7.1_6_x64.exe"
-
-    - name: Baixando Dependencias!
-
-      run: $tempFilePath = "$env:TEMP\nomachine_installer.exe"
-
-    - name: Baixando NGROK E NoMachine
-
-      run: Invoke-WebRequest -Uri $url -OutFile $tempFilePath
+      run: |
+        $url = "https://download.nomachine.com/download/8.7/Windows/nomachine_8.7.1_6_x64.exe"
+        $tempFilePath = "$env:TEMP\nomachine_installer.exe"
+        Invoke-WebRequest -Uri $url -OutFile $tempFilePath
 
     - name: Instalando NoMachine
-
-      run: Start-Process -FilePath $tempFilePath -ArgumentList "/verysilent"
-
+      run: Start-Process -FilePath "$env:TEMP\nomachine_installer.exe" -ArgumentList "/verysilent"
 
     - name: Extraindo NGROK
-
       run: Expand-Archive ngrok.zip
 
     - name: Autenticando no NGROK
-
-      run: .\ngrok\ngrok.exe authtoken 2SmIFZPZNHHuLPFxoRdNokE7wNN_4UTRdCaAmtpm4GbGq8hui
-
+      run: .\ngrok\ngrok.exe authtoken $env:NGROK_AUTH_TOKEN
       env:
-
         NGROK_AUTH_TOKEN: 2SmIFZPZNHHuLPFxoRdNokE7wNN_4UTRdCaAmtpm4GbGq8hui
 
     - name: Enable TS
-
-      run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
+      run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0
 
     - run: Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
 
-    - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
+    - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "UserAuthentication" -Value 1
 
     - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "ClassicX381@27926885" -Force)
 
     - name: Create Tunnel
-
       run: .\ngrok\ngrok.exe tcp 3389
-      
+
     - name: Wait 24 Hours
-      
-      run: $TotalSeconds = 86400
-           $ElapsedTime = 0
-
-           while ($ElapsedTime -lt $TotalSeconds) {
-           Start-Sleep -Seconds 1
-           $ElapsedTime++
-           }
-
-
+      run: |
+        $TotalSeconds = 86400
+        $ElapsedTime = 0
+        while ($ElapsedTime -lt $TotalSeconds) {
+          Start-Sleep -Seconds 1
+          $ElapsedTime++
+        }
